# claude-code-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  LLM_PROVIDERS.md  README.md  TOOLS.md
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs  output.rs  repl.rs
src/cli/commands/: ask.rs  chat.rs  config_cmd.rs  index.rs  mod.rs  search.rs  session.rs  tool_cmd.rs  tools_cmd.rs
src/config/: loader.rs  mod.rs  settings.rs
src/core/: context.rs  conversation.rs  mod.rs  session.rs
src/llm/: client.rs  deepseek.rs  message.rs  mod.rs  openai.rs  streaming.rs  zhipu.rs
src/tools/: executor.rs  mod.rs  registry.rs  schema.rs
src/tools/builtin/: edit.rs  glob.rs  grep.rs  ls.rs  mod.rs  read.rs  shell.rs  web.rs  write.rs
src/utils/: http.rs  markdown.rs  mod.rs  terminal.rs
