[package]
name = "claude_code_rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A Claude Code style AI programming assistant CLI tool"
authors = ["Developer"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

clap = { version = "4", features = ["derive", "env", "string"] }

reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
reqwest-eventsource = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

crossterm = "0.28"
indicatif = "0.17"
termimad = "0.31"
console = "0.15"

rusqlite = { version = "0.32", features = ["bundled"] }

directories = "5"
toml = "0.8"

thiserror = "1"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
walkdir = "2"
async-trait = "0.1"

pulldown-cmark = "0.9"

base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

urlencoding = "2.1"

once_cell = "1.21"

r2d2 = "0.8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "ccode"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
